# Othello

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  Doxyfile  LICENSE  Othello.cpp  README  README.md  Resource.qrc  vc140.idb  vcpkg.json
include/controller/: controller.cppm  controller.ixx
include/model/: board.cppm  board.ixx
include/repository/: db_repository.cppm  file_repository.cppm  repository.cppm
include/view/: gui.cppm  gui.qml  tui.cppm  tui.ixx  view.cppm
qml include/view/: gui.qml
src/controller/: controller.cpp
src/model/: board.cpp  model.cpp
src/repository/: db_repository.cpp  file_repository.cpp
src/view/: gui.cpp  tui.cpp
tests/: unit_tests.cpp
tests/model/: board.cpp
